# lattice-commitments

./: Cargo.toml  README.md
.circleci/: config.yml
src/: chacha_rng.rs  commitment.rs  lib.rs  main.rs  matrix.rs  norms.rs  polynomial.rs  ring64.rs  ring_polynomial.rs  vector.rs
