[package]
name = "lattice-commitments"
version = "0.0.1"
edition = "2021"
authors = ["Chance Hudson <PSE>"]
description = "Structured lattice commitments from Baum16."
homepage = "https://github.com/chancehudson/lattice-commitments"
repository = "https://github.com/chancehudson/lattice-commitments.git"
license = "MIT OR Apache-2.0"

[lib]

[features]
default = ["zk"]
serde = ["dep:serde", "scalarff/serde", "ring-math/serde"]
zk = ["discrete-gaussian", "serde"]

[dependencies]
anyhow = "1.0.91"
bincode = "1.3.3"
discrete-gaussian = { version = "0.0.6", optional = true }
keccak-hash = "0.11.0"
rand = "0.8.5"
#ring-math = { version = "0.4.0", features = ["serde"] }
scalarff = { version = "0.8.0", features = ["random", "serde"] }
serde = { version = "1.0.210", features = ["derive"], optional = true }
#scalarff = { path = "../scalarff", features = ["oxfoi", "random"] }

ring-math = { path = "../ashlang/ring-math", features = ["serde"] }
